# fuzzy

./: .pre-commit-config.yaml  README.md  pyproject.toml
tech_test/app/: main.py  routes.py
tech_test/services/: languages.py  translator.py
tests/: conftest.py  test_integration.py  test_main.py  test_translator.py
