[tool.poetry]
name = "tech-test"
version = "0.1.0"
description = ""
authors = ["jonathan.kerr <3410350+jonodrew@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
fastapi = {extras = ["standard"], version = "^0.119.0"}
transformers = "^4.57.1"
torch = "^2.9.0"
huggingface-hub = "^0.35.3"
sentencepiece = "^0.2.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
